Fixed terms text to be removed on mobile

--- a/src/component-library/consultant-finder/Navigation/Navigation.module.scss
+++ b/src/component-library/consultant-finder/Navigation/Navigation.module.scss
@@ -23,6 +23,7 @@
   }
 
   &.hide-text-on-mobile {
+    color: $navy-blue-100;
     p {
       display: none;
 
